- Fix bug #45722 (mb_check_encoding() crashes).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@267367 c90b9560-bf6c-de11-be94-00142212c4b1